<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="10dp"
    android:layout_marginTop="10dp"
    android:layout_marginRight="10dp">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:scrollbars="vertical">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginTop="20sp"
                android:text="@string/app_name"
                android:textAlignment="center"
                android:textSize="50sp" />

            <Button
                android:id="@+id/btnButton1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/btn1"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btnButton2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="1sp"
                android:text="@string/btn2"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btnButton3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="1sp"
                android:text="@string/btn3"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btnButton4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="1sp"
                android:text="@string/btn4"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btnButton5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="1sp"
                android:text="@string/btn5"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btnButton6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="1sp"
                android:text="@string/btn6"
                android:textSize="20sp" />


        </LinearLayout>

    </ScrollView>

</RelativeLayout>